// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MemoForm.vue > renders form for adding memo when not passing props.id 1`] = `
"<form class="v-form" novalidate="">
  <div class="v-container v-locale--is-ltr">
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-text-field mt-4" data-testid="title-text-field">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--appended v-field--center-affix v-field--has-background v-field--variant-outlined v-theme--light v-locale--is-ltr" style="background-color: rgb(245, 245, 245); color: rgb(0, 0, 0); caret-color: #000;">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator="">
            <!----><label class="v-label v-field-label" for="input-0">
              <!---->*Title
            </label>
            <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" rows="1" class="v-field__input">
            <!---->
          </div>
          <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
            <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear *Title"></i></div>
          </transition-stub>
          <div class="v-field__append-inner">
            <!---->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                <!---->*Title
              </label></div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <div class="v-input__details">
        <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
    <div class="v-input v-input--horizontal v-input--density-default v-locale--is-ltr v-textarea v-text-field mt-4" data-testid="content-text-area">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--appended v-field--has-background v-field--variant-outlined v-theme--light v-locale--is-ltr" style="background-color: rgb(245, 245, 245); color: rgb(0, 0, 0); caret-color: #000;">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator="">
            <!----><label class="v-label v-field-label" for="input-2">
              <!---->*Content
            </label>
            <!----><textarea class="v-field__input" rows="5" id="input-2" aria-describedby="input-2-messages"></textarea>
            <!---->
            <!---->
          </div>
          <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
            <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear *Content"></i></div>
          </transition-stub>
          <div class="v-field__append-inner">
            <!---->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
                <!---->*Content
              </label></div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <div class="v-input__details">
        <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-2-messages">
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
  </div>
  <div class="v-container v-locale--is-ltr d-flex justify-space-evenly mx-16"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E;" data-testid="save-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Save</span>
      <!---->
      <!---->
    </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E; display: none;" data-testid="update-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Update</span>
      <!---->
      <!---->
    </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E; display: none;" data-testid="delete-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Delete</span>
      <!---->
      <!---->
    </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E;" data-testid="cancel-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Cancel</span>
      <!---->
      <!---->
    </button></div>
</form>"
`;

exports[`MemoForm.vue > renders form for editing existing memo when passing props.id 1`] = `
"<form class="v-form" novalidate="">
  <div class="v-container v-locale--is-ltr">
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-text-field mt-4" data-testid="title-text-field">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--appended v-field--center-affix v-field--has-background v-field--variant-outlined v-theme--light v-locale--is-ltr" style="background-color: rgb(245, 245, 245); color: rgb(0, 0, 0); caret-color: #000;">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator="">
            <!----><label class="v-label v-field-label" for="input-0">
              <!---->*Title
            </label>
            <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" rows="1" class="v-field__input">
            <!---->
          </div>
          <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
            <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear *Title"></i></div>
          </transition-stub>
          <div class="v-field__append-inner">
            <!---->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                <!---->*Title
              </label></div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <div class="v-input__details">
        <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
    <div class="v-input v-input--horizontal v-input--density-default v-locale--is-ltr v-textarea v-text-field mt-4" data-testid="content-text-area">
      <!---->
      <div class="v-input__control">
        <div class="v-field v-field--appended v-field--has-background v-field--variant-outlined v-theme--light v-locale--is-ltr" style="background-color: rgb(245, 245, 245); color: rgb(0, 0, 0); caret-color: #000;">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
              <!---->
              <div class="v-progress-linear__background" style="width: 100%;"></div>
              <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                <div class="v-progress-linear__indeterminate">
                  <div class="v-progress-linear__indeterminate long"></div>
                  <div class="v-progress-linear__indeterminate short"></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div class="v-field__field" data-no-activator="">
            <!----><label class="v-label v-field-label" for="input-2">
              <!---->*Content
            </label>
            <!----><textarea class="v-field__input" rows="5" id="input-2" aria-describedby="input-2-messages"></textarea>
            <!---->
            <!---->
          </div>
          <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
            <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear *Content"></i></div>
          </transition-stub>
          <div class="v-field__append-inner">
            <!---->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
                <!---->*Content
              </label></div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <div class="v-input__details">
        <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-2-messages">
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
  </div>
  <div class="v-container v-locale--is-ltr d-flex justify-space-evenly mx-16"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E; display: none;" data-testid="save-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Save</span>
      <!---->
      <!---->
    </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E;" data-testid="update-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Update</span>
      <!---->
      <!---->
    </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E;" data-testid="delete-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Delete</span>
      <!---->
      <!---->
    </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-tonal" style="color: rgb(158, 158, 158); caret-color: #9E9E9E;" data-testid="cancel-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Cancel</span>
      <!---->
      <!---->
    </button></div>
</form>"
`;
